update twbsButton custom element

--- a/fileadmin/templates/theme_t3kit/custom_content_elements/Resources/Private/Templates/CustomContentElements/TwbsButton.html
+++ b/fileadmin/templates/theme_t3kit/custom_content_elements/Resources/Private/Templates/CustomContentElements/TwbsButton.html
@@ -1,7 +1,7 @@
 <div xmlns="http://www.w3.org/1999/xhtml" lang="en" xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
 
 	<f:comment><!--  Use layouts from fluid_styled_content (overridden in theme_t3kit due to wrapper class) --></f:comment>
-	<f:layout name="ContentFooter" />
+	<f:layout name="CustomLayoutClass" />
 	<f:debug>{_all}</f:debug>
 
 	<f:section name="content">
