[TASK] update BE layouts config, add Header and footer

--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -4,8 +4,12 @@
 
 <f:section name="Main">
 
+	<f:cObject typoscriptObjectPath="lib.content.siteHeader" />
+
 	<f:cObject typoscriptObjectPath="lib.content.render" data="{colPos:101}" />
 
+	<f:cObject typoscriptObjectPath="lib.content.siteFooter" />
+	
 </f:section>
 
 </html>
