--- a/Resources/Private/Templates/Page/Sidenav2columns.html
+++ b/Resources/Private/Templates/Page/Sidenav2columns.html
@@ -4,6 +4,7 @@
 <f:layout name="Default" />
 
 <f:section name="Main">
+	<f:cObject typoscriptObjectPath="lib.content.siteHeader" />
 
 	<f:cObject typoscriptObjectPath="lib.content.render" data="{colPos:50}" />
 
@@ -13,6 +14,8 @@
 	<f:cObject typoscriptObjectPath="lib.content.render" data="{colPos:60}" />
 
 	<f:cObject typoscriptObjectPath="lib.content.render" data="{colPos:90}" />
+
+	<f:cObject typoscriptObjectPath="lib.content.siteFooter" />
 
 </f:section>
 
