--- a/Resources/Private/Templates/Page/StartPage.html
+++ b/Resources/Private/Templates/Page/StartPage.html
@@ -4,7 +4,7 @@
 
 <f:section name="Main">
 
-	<f:cObject typoscriptObjectPath="lib.content.render" data="{colPos:1}" />
+	<f:cObject typoscriptObjectPath="lib.content.siteHeader" />
 
 	<f:cObject typoscriptObjectPath="lib.content.render" data="{colPos:50}" />
 
@@ -16,7 +16,7 @@
 
 	<f:cObject typoscriptObjectPath="lib.content.render" data="{colPos:90}" />
 
-	<f:cObject typoscriptObjectPath="lib.content.render" data="{colPos:11}" />
+	<f:cObject typoscriptObjectPath="lib.content.siteFooter" />
 
 </f:section>
 
