--- a/Resources/Private/Templates/Page/1column.html
+++ b/Resources/Private/Templates/Page/1column.html
@@ -5,6 +5,8 @@
 
 <f:section name="Main">
 
+	<f:cObject typoscriptObjectPath="lib.content.siteHeader" />
+
 	<f:cObject typoscriptObjectPath="lib.content.render" data="{colPos:50}" />
 
 	<f:cObject typoscriptObjectPath="lib.content.render" data="{colPos:101}" />
@@ -12,6 +14,8 @@
 	<f:cObject typoscriptObjectPath="lib.content.render" data="{colPos:60}" />
 
 	<f:cObject typoscriptObjectPath="lib.content.render" data="{colPos:90}" />
+
+	<f:cObject typoscriptObjectPath="lib.content.siteFooter" />
 
 </f:section>
 
