--- a/Resources/Private/Layouts/ContentElements/Default.html
+++ b/Resources/Private/Layouts/ContentElements/Default.html
@@ -1,6 +1,7 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:spaceless>
 
+<f:debug>{_all}</f:debug>
 
 	<f:if condition="{data.frame_class} || {data.space_before_class} || {data.space_after_class}">
 		<div class="frame {data.frame_class} {data.space_before_class} {data.space_after_class}">
@@ -8,9 +9,17 @@
 
 	<div id="c{data.uid}" class="CType__{data.CType} {f:if(condition: data.layout, then: ' {data.layout}')}">
 		<f:if condition="{data._LOCALIZED_UID}"><a id="c{data._LOCALIZED_UID}"></a></f:if>
-		<f:render partial="Header/All" arguments="{_all}" />
-		<f:render section="Main" />
-		<f:render partial="Nav/ToTop" arguments="{_all}" />
+
+		<f:render section="Header" optional="true">
+			<f:render partial="Header/All" arguments="{_all}" />
+		</f:render>
+
+		<f:render section="Main" optional="true" />
+
+		<f:render section="ScrollToTop" optional="true">
+			<f:render partial="Nav/ScrollToTop" arguments="{_all}" />
+		</f:render>
+
 	</div>
 
 	<f:if condition="{data.frame_class} || {data.space_before_class} || {data.space_after_class}">
@@ -19,4 +28,5 @@
 
 
 </f:spaceless>
+
 </html>
