--- a/Resources/Private/Layouts/Page/Default.html
+++ b/Resources/Private/Layouts/Page/Default.html
@@ -1,15 +1,9 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:spaceless>
 
-	<f:comment>
-		<f:render partial="Header/Header" arguments="{_all}" />
-	</f:comment>
+	<div id="top"></div>
 
 	<f:render section="Main" />
-
-	<f:comment>
-		<f:render partial="Footer/Footer" arguments="{_all}" />
-	</f:comment>
 
 </f:spaceless>
 </html>
