--- a/Resources/Private/Partials/ContentElements/Header/All.html
+++ b/Resources/Private/Partials/ContentElements/Header/All.html
@@ -5,17 +5,17 @@
 			<f:render partial="Header/Header" arguments="{
 				header: data.header,
 				layout: data.header_layout,
-				positionClass: '{f:if(condition: data.header_position, then: \'ce-headline-{data.header_position}\')}',
+				positionClass: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}',
 				link: data.header_link,
 				default: settings.defaultHeaderType}" />
 			<f:render partial="Header/SubHeader" arguments="{
 				subheader: data.subheader,
 				layout: data.header_layout,
-				positionClass: '{f:if(condition: data.header_position, then: \'ce-headline-{data.header_position}\')}',
+				positionClass: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}',
 				default: settings.defaultHeaderType}" />
 			<f:render partial="Header/Date" arguments="{
 				date: data.date,
-				positionClass: '{f:if(condition: data.header_position, then: \'ce-headline-{data.header_position}\')}'}" />
+				positionClass: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}'}" />
 		</header>
 	</f:if>
 </f:if>
