--- a/Resources/Private/Templates/Page/Empty.html
+++ b/Resources/Private/Templates/Page/Empty.html
@@ -1,10 +1,10 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true"></html>
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
 <f:layout name="Default" />
 
 <f:section name="Main">
 
-	<f:cObject typoscriptObjectPath="lib.content.render" data="{colPos:101}" />
+	<f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:101}" />
 
 </f:section>
 
