--- a/Resources/Private/Templates/ContentElements/Static/SocialIcons.html
+++ b/Resources/Private/Templates/ContentElements/Static/SocialIcons.html
@@ -3,9 +3,10 @@
 <f:layout name="Default" />
 <f:section name="Header" />
 <f:section name="Main">
-<!-- theme_t3kit: Templates/ContentElements/SocialIcons.html [begin] -->
-	<f:render partial="Socialmedia" section="Default" arguments="{settings: settings, allowLinksFromConstants: allowLinksFromConstants}"/>
-<!-- theme_t3kit: Templates/ContentElements/SocialIcons.html [end] -->
+  <!-- theme_t3kit: Templates/ContentElements/SocialIcons.html [begin] -->
+  <f:render partial="Socialmedia" section="Default"
+    arguments="{settings: settings, allowLinksFromConstants: allowLinksFromConstants}" />
+  <!-- theme_t3kit: Templates/ContentElements/SocialIcons.html [end] -->
 </f:section>
 
 </html>
