--- a/Resources/Private/Templates/ContentElements/Static/Button.html
+++ b/Resources/Private/Templates/ContentElements/Static/Button.html
@@ -3,24 +3,25 @@
 <f:layout name="Default" />
 <f:section name="Header" />
 <f:section name="Main">
-<!-- theme_t3kit: Templates/ContentElements/Button.html [begin] -->
-	<f:comment><!-- set button classes --></f:comment>
-	<f:variable name="btnClass">btn</f:variable>
-	<f:if condition="{settings.buttonStyle}">
-		<f:variable name="btnClass">{btnClass} {settings.buttonStyle}</f:variable>
-	</f:if>
-	<f:if condition="{settings.buttonSize}">
-		<f:variable name="btnClass">{btnClass} {settings.buttonSize}</f:variable>
-	</f:if>
-	<f:if condition="{settings.blockLevel}">
-		 <f:variable name="btnClass">{btnClass} btn-block</f:variable>
-	</f:if>
+  <!-- theme_t3kit: Templates/ContentElements/Button.html [begin] -->
+  <f:comment>
+    <!-- set button classes -->
+  </f:comment>
+  <f:variable name="btnClass">btn</f:variable>
+  <f:if condition="{settings.buttonStyle}">
+    <f:variable name="btnClass">{btnClass} {settings.buttonStyle}</f:variable>
+  </f:if>
+  <f:if condition="{settings.buttonSize}">
+    <f:variable name="btnClass">{btnClass} {settings.buttonSize}</f:variable>
+  </f:if>
+  <f:if condition="{settings.blockLevel}">
+    <f:variable name="btnClass">{btnClass} btn-block</f:variable>
+  </f:if>
 
-	<f:if condition="{data.header_link}">
-		<f:link.typolink parameter="{data.header_link}" class="{btnClass}">{data.header}</f:link.typolink>
-	</f:if>
-<!-- theme_t3kit: Templates/ContentElements/Button.html [end] -->
+  <f:if condition="{data.header_link}">
+    <f:link.typolink parameter="{data.header_link}" class="{btnClass}">{data.header}</f:link.typolink>
+  </f:if>
+  <!-- theme_t3kit: Templates/ContentElements/Button.html [end] -->
 </f:section>
 
 </html>
-
